--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.4.4",
+    "ra-data-simple-rest": "^4.4.4",
     "react": "^18.2.0",
     "react-admin": "^4.4.4",
     "react-dom": "^18.2.0",
